@@ -1726,19 +1726,26 @@ parse_comp(const char *s, int strict,
 	   VALUE *num)
 {
     char *buf, *b;
+    VALUE tmp;
+    int ret = 1;
 
-    buf = ALLOCA_N(char, strlen(s) + 1);
+    buf = ALLOCV_N(char, tmp, strlen(s) + 1);
     b = buf;
 
     skip_ws(&s);
-    if (!read_comp(&s, strict, num, &b))
-	return 0;
-    skip_ws(&s);
+    if (!read_comp(&s, strict, num, &b)) {
+	ret = 0;
+    }
+    else {
+	skip_ws(&s);
 
-    if (strict)
-	if (*s != '\0')
-	    return 0;
-    return 1;
+	if (strict)
+	    if (*s != '\0')
+		ret = 0;
+    }
+    ALLOCV_END(tmp);
+
+    return ret;
 }
 
 static VALUE
